# erso

./: .pylintrc  Dockerfile-github  Dockerfile-local  LICENSE  README.md  erso.sh  pyproject.toml  run.sh
.github/workflows/: docker-build.yml  pylint.yml
erso/: __main__.py
erso/handlers/: __init__.py  base.py  index.py  login.py  logout.py  static.py
erso/handlers/templates/: Denied.html  Error.html  Header.html  Index.html  Login.html  PrimerIncludes.html
